# MetaxScaler

./: .env.example  CONTRIBUTING.md  DEPLOYMENT_GUIDE.md  Dockerfile  LICENSE  README.md  app.py  baseline_scores.json  docker-compose.yml  inference.py  openenv.yaml  pyproject.toml  requirements.txt  validate_submission.py
.github/workflows/: huggingface_sync.yml  sync-to-hf.yml
.pytest_cache/v/cache/: nodeids
env/: __init__.py  dataset.py  env.py  graders.py  models.py  tasks.py
project/: .dockerignore  Dockerfile  README.md  app.py  baseline_scores.json  inference.py  openenv.yaml  pyproject.toml  requirements.txt
project/env/: __init__.py  dataset.py  env.py  graders.py  models.py  tasks.py
server/: app.py  main.py  validate_submission.py
tests/: test_env_quality.py
