[project]
name = "cloud-cost-optimizer-env"
version = "1.0.0"
description = "OpenEnv-compatible AI Cloud Infrastructure Cost Optimization environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic>=2.0.0",
  "openai>=1.0.0",
  "fastapi>=0.110.0",
  "uvicorn[standard]>=0.27.0",
  "httpx>=0.27.0",
  "openenv-core>=0.2.3",
  "pyyaml>=6.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
