[project]
name = "support-ticket-env"
version = "0.1.0"
description = "OpenEnv-compatible support ticket environment"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "pydantic",
  "openai",
  "fastapi",
  "uvicorn",
  "openenv-core>=0.2.0",
]

[project.scripts]
server = "server.app:main"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"
